--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,21 @@
 *.out
 *.run.xml
 *.bbl-SAVE-ERROR
+*.bcf-SAVE-ERROR
+*.log
+*.synctex(busy)
+*.glo
+*.glsdefs
+*.ist
+*.acn
+*.idx
+*.ind
+*.ilg
+*.sbl
+*.acr
+*.alg
+*.glg
+*.gls
+*.sym
+4_images/Unterschrift.png
+
